# servant-persistent-sample

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  servant-sample.cabal  stack.yaml
app/: Main.hs
conf/: database-setting.json  database-setting.yml
src/: Api.hs  App.hs  DataStore.hs  Handler.hs  Handler2.hs  HelloApi.hs  Lib.hs  Main.hs  Router.hs  Router2.hs  State.hs
src/DataStore/: Internal.hs
static/: app.js  app.map  index.html
static-src/: app.js
