name:                servant-sample
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-sample#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , HelloApi
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , aeson
                     , monad-logger
                     , transformers
                     , resourcet
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , servant
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable servant-sample
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , text
                     , aeson
                     , monad-logger
                     , transformers
                     , resourcet
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , wai
                     , warp
                     , servant
                     , servant-server
                     , servant-sample
  default-language:    Haskell2010

test-suite servant-sample-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-sample
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-sample
