name:                servant-sample
version:             0.1.0.0
homepage:            https://github.com/jabaraster/servant-persistent-sample.git
license:             MIT
license-file:        LICENSE
author:              Tomoyuki Kawano
maintainer:          ah@jabara.info
copyright:           2017 Tomoyuki Kawano
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DataStore
                     , DataStore.Internal
  build-depends:       base
                     , bytestring
                     , text
                     , aeson
                     , yaml
                     , lens
                     , monad-logger
                     , transformers
                     , resourcet
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , servant
                     , servant-server
                     , http-types
                     , wai
                     , warp
  default-language:    Haskell2010

executable servant-sample
  hs-source-dirs:      src
  other-modules:       DataStore
                     , DataStore.Internal
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , text
                     , aeson
                     , yaml
                     , lens
                     , monad-logger
                     , transformers
                     , resourcet
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , servant
                     , servant-server
                     , http-types
                     , wai
                     , warp
                     , servant-sample
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jabaraster/servant-persistent-sample.git
